# meta_hackathon

./: .gitignore  Dockerfile  README.md  app.py  deploy_space.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  training_queries.json  validate-submission.sh
__pycache__/: inference.cpython-314.pyc.2217807849600
server/: app.py  environment.py
server/__pycache__/: environment.cpython-314.pyc.1851427568160  environment.cpython-314.pyc.2094971151264
tests/: test_grader_determinism.py
tests/__pycache__/: test_grader_determinism.cpython-314.pyc.2094965845296
