[project]
name = "sql-data-analyst-env"
version = "1.0.0"
description = "SQL Data Analyst OpenEnv environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
